커뮤니티 구현

--- a/mysite/users/templates/HomePage.html
+++ b/mysite/users/templates/HomePage.html
@@ -259,7 +259,7 @@
                         <a class="nav-link" href="#">관광지</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">커뮤니티</a>
+                        <a href="/board/list" class="nav-link" href="#">커뮤니티</a>
                     </li>
                 </ul>
                 <div class="navEnd">
