코스, 관광지 링크

--- a/mysite/users/templates/bcourse.html
+++ b/mysite/users/templates/bcourse.html
@@ -361,5 +361,23 @@
           </div>
           
      </div>
+
+     <nav>
+        <ul class="pagination justify-content-center">
+            <li class="page-item">
+                <a class="page-link" href="">Prev</a>
+            </li>
+            <li class="page-item active">
+                <a class="page-link" href="">1</a>
+            </li>
+            <li>
+                <a class="page-link" href="">2</a>
+            </li>
+            <li class="page-item">
+                <a href="/bfavorites" class="page-link" href="">Next</a>
+            </li>
+          </ul>
+    </nav> 
+
 </body>
 </html>
