--- a/mysite/users/templates/bfavorites.html
+++ b/mysite/users/templates/bfavorites.html
@@ -82,10 +82,13 @@
     <nav>
         <ul class="pagination justify-content-center">
             <li class="page-item">
-                <a class="page-link" href="">Prev</a>
+                <a href="/bcourse" class="page-link" href="">Prev</a>
+            </li>
+            <li>
+                <a class="page-link" href="">1</a>
             </li>
             <li class="page-item active">
-                <a class="page-link" href="">1</a>
+                <a class="page-link" href="">2</a>
             </li>
             <li class="page-item">
                 <a class="page-link" href="">Next</a>
