--- a/mysite/users/templates/HomePage.html
+++ b/mysite/users/templates/HomePage.html
@@ -253,10 +253,10 @@
                         <a class="nav-link" href="#">추천</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">코스</a>
+                        <a href="/bcourse" class="nav-link" href="#">코스</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">관광지</a>
+                        <a href="/btourlistspotdetail" class="nav-link" href="#">관광지</a>
                     </li>
                     <li class="nav-item">
                         <a href="/board/list" class="nav-link" href="#">커뮤니티</a>
